--- a/indexarlist.html
+++ b/indexarlist.html
@@ -6,6 +6,9 @@
 	</head>
 	<body>
 		<label id="lblinput">Type a word, sentence or phrase: </label>
-		
+		<input type="text" id="txtinput"></input>
+		<button id="btnSubmit">Submit</button>
+		<button id="btnDisplay">Display</button><br>
+		<label id="lbldispresult"></label>
 	</body>
 </html>
